fixed off-by-one in tri and added color

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,6 +85,7 @@
         "stop_token": "cpp",
         "text_encoding": "cpp",
         "thread": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "core": "cpp"
     }
 }
