started using more generic scene nodes for model and camera, need to apply to make scene heirarchy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,19 +26,20 @@ add_executable(Crayfish ${SOURCES}
     "src/main.cpp"
     "src/RenderFrame.cpp"
     "src/Triangle.cpp"
-    "src/Camera.cpp"
-    "src/CameraOrtho.cpp"
-    "src/Model.cpp"
+    "src/SceneNodeCamera.cpp"
+    "src/SceneNodeCameraOrtho.cpp"
+    "src/SceneNodeModel.cpp"
     "src/Scene.cpp"
     "src/Vertex.cpp"
     "src/Random.cpp"
-    "src/CameraPerspective.cpp"
+    "src/SceneNodeCameraPerspective.cpp"
     "src/Config.cpp"
     "src/ShaderFragment.cpp"
     "src/Material.cpp"
     "src/ShaderFragmentLit.cpp"
     "src/MaterialLit.cpp"
     "src/Texture2d.cpp"
+    "src/SceneNode.cpp"
 )
 
 set_target_properties(Crayfish PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
